fix drag on mobile

--- a/src/map/_map.scss
+++ b/src/map/_map.scss
@@ -172,10 +172,6 @@
     height: 1125px;
     background: url('img/map.jpg');
     transform-origin: top left;
-
-    /*&.drag-over {
-      cursor: crosshair;
-    }*/
 }
 
 /*.point-marker {
@@ -369,4 +365,9 @@
   align-items: center;
   font-size: 400%;
   z-index: 21;
+}
+
+.crosshair {
+  position: absolute;
+  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='utf-8'%3F%3E%3Csvg xmlns='http://www.w3.org/2000/svg' id='root' version='1.1' viewBox='0 0 16 16'%3E%3Ccircle fill='none' stroke='currentColor' cx='8' cy='8' r='6'/%3E%3Cpath fill='none' stroke='currentColor' d='M 8 0 L 8 6.5'/%3E%3Cpath fill='none' stroke='currentColor' d='M 0 8 L 6.5 8'/%3E%3Cpath fill='none' stroke='currentColor' d='M 8 9.5 L 8 16'/%3E%3Cpath fill='none' stroke='currentColor' d='M 9.5 8 L 16 8'/%3E%3C/svg%3E");
 }
