--- a/src/player-table/_player-train-cars.scss
+++ b/src/player-table/_player-train-cars.scss
@@ -94,11 +94,6 @@
         height: 280px;
         padding-top: 10px;
         zoom: 0.5; //transform: scale(0.5); doesn't work but zoom does
-
-        .train-car-cards {
-            top: 10px;
-            left: 10px;
-        }
     }
     
     &.disabled {
